Cambiada filosofia. VistaGUI extiende a Application y se utiliza de forma modular VistaConsola